# embedded-qr

./: Cargo.toml  Readme.markdown
examples/: qrcodegen-demo.rs
src/: drawable.rs  lib.rs
