[package]
name = "embedded-qr"
version = "1.8.0"
authors = ["Project Nayuki", "Roady McRoad <roady@mcroad.me>"]
description = "High-quality QR Code generator library"
homepage = "https://github.com/mcroad/embedded-qr"
repository = "https://github.com/mcroad/embedded-qr"
license = "MIT"

[dependencies]
embedded-graphics = "0.7.1"
